# dentistry

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  package.json
.cursor/: hooks.json
.cursor/hooks/: portability-check.sh  precheck.sh
.cursor/rules/: api-conventions.mdc  portability-invariants.mdc  security-invariants.mdc  sharing-invariants.mdc  web-conventions.mdc
.cursor/skills/add-tenant-table/: SKILL.md
.github/workflows/: build-and-publish.yml  deploy.yml  e2e.yml  nightly-backup.yml  pr.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260527_2300_0001_initial_schema.py  20260603_0002_system_role.py
apps/api/app/: __init__.py  main.py
apps/api/app/adapters/: __init__.py
apps/api/app/adapters/identity/: __init__.py  jwks.py  local.py  protocol.py
apps/api/app/adapters/storage/: __init__.py  protocol.py  s3.py
apps/api/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
apps/api/app/db/: __init__.py  base.py  create_admin.py  create_platform_admin.py  seed.py  session.py  types.py
apps/api/app/middleware/: __init__.py  auth.py
apps/api/app/models/: __init__.py  enums.py  tables.py
apps/api/app/routers/: __init__.py  auth.py  health.py  media.py  patients.py  platform.py  visits.py
apps/api/app/schemas/: __init__.py  auth.py  media.py  patients.py  platform.py  visits.py
apps/api/app/services/: __init__.py  auth.py  media.py  patients.py  pdf.py  platform.py  visits.py
apps/api/app/sharing/: __init__.py  external.py  internal.py  router.py  schemas.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_auth_signup_policy.py  test_platform_admin.py  test_platform_support.py  test_visit_history.py
apps/api/tests/rls/: conftest.py  test_rls_patient_isolation.py
apps/api/tests/unit/: test_config.py  test_health.py  test_identity_local.py  test_media_exif.py  test_pdf_render.py  test_security.py  test_sharing_helpers.py
apps/web/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/lib/: api.ts  auth-api.ts  auth.ts  patients.ts  platform-api.ts  router-auth.ts
apps/web/src/routes/: __root.tsx  index.tsx  login.tsx  patients.$patientId.tsx  patients.new.tsx  patients.tsx  (+6 more)
apps/web/tests/: auth-api.test.ts  cn.test.ts  patient-history-api.test.ts  router-auth.test.ts
docs/: env-contract.md
infra/aws/: README.md  cognito.tf  ecs.tf  main.tf  network.tf  rds.tf  s3.tf  variables.tf
infra/compose/: docker-compose.yml
infra/db/init/: 00-extensions.sql  10-roles.sql
infra/docker/: api.Dockerfile  api.dev.Dockerfile  nginx.conf  web.Dockerfile  web.dev.Dockerfile
infra/fly/: fly.toml
infra/runbooks/: admin-access.md  local-troubleshooting.md  migrate-to-aws.md  restore-db.md  rotate-keys.md
scripts/: check_portability.py
(+1 files in other folders)
