[project]
name = "clinic-crm-api"
version = "0.1.0"
description = "FastAPI backend for clinic-crm"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "clinic-crm" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "pillow>=11.0.0",
    "weasyprint>=63.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "schemathesis>=3.39.0",
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "ASYNC", # flake8-async
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert usage (fine in tests)
    "B008",  # function call in default (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107", "S311", "E501"]
"alembic/versions/*" = ["E501", "S608"]  # DDL strings & dynamic table names from hardcoded tuples
"alembic/env.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["weasyprint.*", "factory.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "integration: integration tests requiring a real database",
    "rls: row-level-security isolation tests",
    "slow: slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["alembic/*", "tests/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
